--- a/src/pages/confirmpopup/confirmpopup.html
+++ b/src/pages/confirmpopup/confirmpopup.html
@@ -47,7 +47,7 @@
                         </div>
                     </ion-col>
                 </ion-row>
-                <button class="btn bg-theme text-white rounded" (click)="confirmpopup()" style="width: 100%;margin-top: 14px;">CONFIRM REQUEST</button>
+                <button class="btn bg-theme text-white rounded" (click)="goToRide()" style="width: 100%;margin-top: 14px;">confirmar conductor</button>
             </div>
         </ion-card-content>
     </ion-card>
