--- a/src/pages/listride/listride.html
+++ b/src/pages/listride/listride.html
@@ -60,7 +60,7 @@
                     $ 60
                 </ion-col>
                 <ion-col center text-center col-4 text-right style="margin-left: auto;">
-                    <button class="btn bg-theme rounded full text-white" (click)="riderprofile()">Request Ride</button>
+                    <button class="btn bg-theme rounded full text-white" (click)="confirmpopup(driver)">Request Ride</button>
                 </ion-col>
             </ion-row>
         </ion-card-content>
