--- a/src/pages/listride/listride.html
+++ b/src/pages/listride/listride.html
@@ -45,9 +45,9 @@
         <ion-card-content>
             <div class="ride-detail">
                 <p>
-                    <span class="icon-location bg-theme"></span><span class="time">12:00 am</span>Washington sq.park New York</p>
+                    <span class="icon-location bg-theme"></span><span class="time">12:00 am</span>{{driver.origin}}</p>
                 <p>
-                    <span class="icon-location bg-yellow"></span><span class="time">12:50 am</span>Harison, east sq.park New York</p>
+                    <span class="icon-location bg-yellow"></span><span class="time">12:50 am</span>{{driver.destination}}</p>
             </div>
             <ion-row class="center-align">
                 <ion-col col-3 class="detail-text text-theme">
