customer app up to now

--- a/src/pages/findride/findride.html
+++ b/src/pages/findride/findride.html
@@ -39,7 +39,9 @@
     
   <button (click)="listride()" class="btn rounded bg-theme text-white" style="width: 100%">Pedir</button>
 
- 
+  <div class="btn-footer">
+    <button class="btn rounded bg-theme text-white" style="width: 100%" (click)="goToMyReserves()" >Mis Reservas</button>
+</div>
 
 
 
