--- a/src/pages/confirmpopup/confirmpopup.html
+++ b/src/pages/confirmpopup/confirmpopup.html
@@ -14,10 +14,10 @@
         <ion-card-content>
             <div class="ride-detail">
                 <p><small>Origen</small>
-                    <span class="icon-location bg-theme"></span>{{reserve.orReserve}}</p>
+                    <span class="icon-location bg-theme"></span>{{reserve.origin}}</p>
                 <p>
                     <small>Destino</small>
-                    <span class="icon-location bg-yellow"></span>{{reserve.destReserve}}</p>
+                    <span class="icon-location bg-yellow"></span>{{reserve.destination}}</p>
             </div>
         </ion-card-content>
 
