bugs fixed and new stuff

--- a/src/pages/confirmpopup/confirmpopup.html
+++ b/src/pages/confirmpopup/confirmpopup.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <ion-icon name="md-close" class="close-icon text-white" (click)="dismiss()"></ion-icon>
+    <ion-icon name="md-close" class="close-icon text-white" (click)="dismissX()"></ion-icon>
     <ion-card>
         <h6 class="text-theme">Detalles del Viaje</h6>
         <ion-item>
