--- a/src/pages/confirmreserve/confirmreserve.html
+++ b/src/pages/confirmreserve/confirmreserve.html
@@ -1,6 +1,8 @@
 <ion-content>
     <ion-icon name="md-close" class="close-icon text-white" (click)="dismiss()"></ion-icon>
     <ion-card>
+         <img src="assets/imgs/compaes.png" width="100px" style="display:inline-block" height="150px"/>
+
        <h6 class="text-theme">Tus pasajeros</h6>
        <ion-item  *ngFor="let passenger of passengers" >
           <ion-avatar item-start>
