--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -56,7 +56,7 @@
                                             <ion-list class="form">
                                                 <ion-item class="editable-email">
                                                         <ion-label></ion-label>
-                                                            <ion-input type="text" text-right formControlName="email" placeholder= "email"></ion-input>
+                                                            <ion-input type="text" text-right [(ngModel)]='onlyEmail' formControlName="email" placeholder= "email"></ion-input>
                                                         </ion-item>
                                                 </ion-list>
                                         </ion-col>
