--- a/src/pages/canceltrip/canceltrip.html
+++ b/src/pages/canceltrip/canceltrip.html
@@ -3,7 +3,6 @@
     <ion-card>
             <img src="assets/imgs/cancelacion.png" width="100px" style="display:inline-block" height="150px"/>
 
-        <h6 class="hot-title">Usuario de último minuto</h6>
         <!-- <h5 class="text-hot">Este usuario desea irse contigo</h5> -->
         <ion-item>
             
@@ -19,7 +18,7 @@
         <ion-card-content>
             <ion-row>
                 <ion-col>
-                    <button class="btn bg-white text-hot rounded" (click)="dismiss()"  style="width: 100%;margin-top: 14px;">OK</button>
+                    <button class="btn bg-white text-red rounded" (click)="dismiss()"  style="width: 100%;margin-top: 14px;">OK</button>
 
                 </ion-col>
                
