--- a/src/pages/ratetrip/ratetrip.html
+++ b/src/pages/ratetrip/ratetrip.html
@@ -12,7 +12,7 @@
 
       </p>
           <h4 class="text-dark">el precio que pagaste por este viaje fue de:</h4>
-          <h1 class="text-theme">$ {{userDriver[0].price}}</h1>
+          <h1 class="text-theme">$ {{trip.price}}</h1>
       </div>
   </ion-card>
   <ion-card class="rate">
@@ -35,7 +35,7 @@
           </div>
       </div>
   </ion-card>
-  <p class="love">Desarrollado con Amor para universitarios  <ion-icon name="heart"></ion-icon></p> 
+  <p class="love">Desarrollado con <ion-icon name="heart"></ion-icon> para universitarios</p> 
 
 </ion-content>
 
