--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
-<ion-tabs tabsHideOnSubPages="false">
-        <ion-tab [root]="tab1Root" tabTitle="Pedir Viaje" tabIcon="md-search" tabsHideOnSubPages="false"></ion-tab>
+<ion-tabs tabsHideOnSubPages="false" [selectedIndex]="1">
 
-    <ion-tab [root]="tab2Root" tabTitle="Mi Viaje" tabIcon="md-car" tabsHideOnSubPages="false"></ion-tab>
     <ion-tab [root]="tab3Root" tabTitle="Historial" tabIcon="md-card" tabsHideOnSubPages="false"></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="Pedir Viaje" tabIcon="md-car" tabsHideOnSubPages="false"></ion-tab>
+
     <ion-tab [root]="tab4Root" tabTitle="Perfil" tabIcon="md-person" tabsHideOnSubPages="false"></ion-tab>
 </ion-tabs>
  
