--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -34,7 +34,7 @@
                     </ion-item>
                     <ion-item>
                         <ion-label floating>Número Telefónico Actual</ion-label>
-                        <ion-input type="number"  [(ngModel)]="user.phone" ></ion-input>
+                        <ion-input type="number"  [(ngModel)]="user.phone" readonly></ion-input>
                     </ion-item>
                     <ion-item>
                         <ion-label stacked>Número Telefónico Nuevo</ion-label>
