--- a/src/pages/listride/listride.html
+++ b/src/pages/listride/listride.html
@@ -33,7 +33,7 @@
             <div class="name">
                
                 <h2>{{trip.driver.name| titlecase}} {{trip.driver.lastname| titlecase | slice:0:1}}
-                    <ion-icon name="ios-checkmark-circle" class="text-hot"></ion-icon>
+                    <ion-icon *ngIf='verified' name="ios-checkmark-circle" class="text-hot"></ion-icon>
                 </h2>
                 <p>{{trip.car}}</p>
             </div>
@@ -74,7 +74,7 @@
             <div class="name">
                 
                 <h2>{{reserve.driver.name| titlecase}} {{reserve.driver.lastname| titlecase | slice:0:1}} 
-                    <ion-icon name="ios-checkmark-circle" class="text-theme"></ion-icon>
+                    <ion-icon  *ngIf='reserve.driver.verifiedPerson' name="ios-checkmark-circle" class="text-theme"></ion-icon>
                 </h2>
                 <p>{{reserve.car}}</p>
             </div>
