--- a/src/pages/reservetrip/reservetrip.html
+++ b/src/pages/reservetrip/reservetrip.html
@@ -57,7 +57,7 @@
                                 <div class="name">
                 
                                     <h2>{{reserve.driver.name| titlecase}} {{reserve.driver.lastname| titlecase | slice:0:1}}
-                                        <ion-icon name="ios-checkmark-circle" class="text-theme"></ion-icon>
+                                        <ion-icon *ngIf='reserve.driver.verifiedPerson' name="ios-checkmark-circle" class="text-theme"></ion-icon>
                                     </h2>
                                     
                                 </div>
