commit for merge last

--- a/src/pages/confirmtrip/confirmtrip.html
+++ b/src/pages/confirmtrip/confirmtrip.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <ion-icon name="md-close" class="close-icon text-white" (click)="dismiss()"></ion-icon>
+    <ion-icon name="md-close" class="close-icon text-white" (click)="dismissByClick()"></ion-icon>
     <ion-card>
         <h6 class="text-hot hot">Viaje Iniciado </h6>
         <ion-item>
@@ -39,8 +39,8 @@
                     
                 </ion-row>
             </div>
-                <button class="btn bg-hot text-white rounded" (click)="goToRide()" *ngIf="hideButton" style="width: 100%;margin-top: 14px;">Enviar Solicitud </button>
-                <p  text-center *ngIf="hideText">espera que tu compañero te acepte, si demora mucho presiona la X y escoje otro driver...</p> 
+                <button class="btn bg-hot text-white rounded" (click)="goToRide()" *ngIf="button" style="width: 100%;margin-top: 14px;">Enviar Solicitud </button>
+                <p  text-center *ngIf="text">espera que tu compañero te acepte, si demora mucho presiona la X y escoje otro driver...</p> 
         </ion-card-content>
     </ion-card>
 </ion-content>
