ready for 3rd update

--- a/src/pages/confirmtrip/confirmtrip.html
+++ b/src/pages/confirmtrip/confirmtrip.html
@@ -16,10 +16,10 @@
         <ion-card-content>
             <div class="ride-detail">
                 <p><small>Origen del viaje</small>
-                    <span class="icon-location bg-hot"></span>{{trip.origin}}</p>
+                    <span class="icon-location bg-hot"></span>{{trip.houseAddr}}</p>
                 <p>
                     <small>Destino del viaje</small>
-                    <span class="icon-location bg-yellow"></span>{{trip.destination}}</p>
+                    <span class="icon-location bg-yellow"></span>{{trip.placeAddr}}</p>
             </div>
         </ion-card-content>
 
