--- a/src/pages/ratetrip/ratetrip.html
+++ b/src/pages/ratetrip/ratetrip.html
@@ -35,7 +35,7 @@
           </div>
       </div>
   </ion-card>
-  <p class="love">Desarrollado con <ion-icon name="heart"></ion-icon> para universitarios</p> 
+  <p class="love">Created with <ion-icon name="heart"></ion-icon></p> 
 
 </ion-content>
 
