falta reglas y rate trip user

--- a/src/pages/p-findride/findride.html
+++ b/src/pages/p-findride/findride.html
@@ -47,7 +47,7 @@
 <ion-row class="rowOfButtons">
 
   <div class="btn-footer btn-left">
-      <button class="btn rounded bg-darkblue text-white myReservesButton" style="width: 100%" (click)="goToMyReserves()" >Mis Reservas</button> 
+      <button class="btn rounded bg-darkblue text-white myReservesButton" style="width: 100%" (click)="goToMyReserves()" >Mis Viajes</button> 
   </div>
   <div class="btn-right">
       <button (click)="listride()" class="btn rounded bg-theme text-white " style="width: 100%">Buscar</button>
