hacer build para promigas y electricaribe

--- a/src/pages/p-login/login.html
+++ b/src/pages/p-login/login.html
@@ -22,11 +22,12 @@
                 </ion-item>
             </ion-list>
             <button ion-button full class="bg-theme text-white btn rounded" type="submit" [disabled]="!loginGroup.valid">ENTRAR</button>
+            <button ion-button full class="bg-darkblue text-white btn rounded" (click)="signup()" >REGÍSTRATE</button>
+
             <br>
          </form>
 
             <ion-row style="padding-top: 30px;">
-                <ion-col (click)="signup()"><small>¿Eres nuevo? <strong class="text-theme">¡Regístrate!</strong></small></ion-col>
                 <ion-col text-right (click)="resetPassword(email)"><small>Olvidaste tu <strong class="text-theme">contraseña?</strong></small></ion-col>
             </ion-row>
            
