--- a/src/pages/confirmprice/driverConfirmprice.html
+++ b/src/pages/confirmprice/driverConfirmprice.html
@@ -1,7 +1,7 @@
 <ion-content>
-    <ion-icon name="md-close" class="close-icon text-white" (click)="dismiss()"></ion-icon>
     <ion-card>
             <img src="assets/imgs/detallesviaje.png" width="100px" style="display:inline-block" height="150px"/>
+            <ion-icon name="close-circle" class="close-icon text-white"  (click)="dismiss()"></ion-icon>
 
         <ion-card-content>
             <div class="ride-detail">
