--- a/src/pages/p-signup/signup.html
+++ b/src/pages/p-signup/signup.html
@@ -38,7 +38,7 @@
                                         <ion-col class="name-fild-2">
                                             <ion-list class="form">
                                                 <ion-item class="editable-email">
-                                                        <ion-label></ion-label>
+                                                    <ion-label  fixed><span style="font-weight: bold; color: red;">Email coorporativo</span></ion-label>
                                                             <ion-input type="text" text-right [(ngModel)]='email' formControlName="email" placeholder= "email"></ion-input>
                                                         </ion-item>
                                                 </ion-list>
