--- a/src/pages/showinfocar/driverShowinfocar.html
+++ b/src/pages/showinfocar/driverShowinfocar.html
@@ -1,6 +1,6 @@
 <ion-content>
-    <ion-icon name="md-close" class="close-icon text-white" (click)="dismiss()"></ion-icon>
     <ion-card>
+        <ion-icon name="close-circle" class="close-icon text-theme-driver"  (click)="dismiss()"></ion-icon>
         <h6 class="text-theme-driver">Mis vehículos</h6>
         <ion-item *ngFor="let car of carList">
             <div  style="display: flex">
