quedo listo vistas de grupo, pendiente merge

--- a/src/pages/p-listride/listride.html
+++ b/src/pages/p-listride/listride.html
@@ -103,9 +103,9 @@
                                                                                             Hora: {{crew.startHour}}
                                                                                          
                                                                                         </h2>                    
-                                                                                <!-- <ion-col center text-center col-4 text-right style="margin-left: auto;">
-                                                                                    <button class="btn bg-theme rounded full text-white" style="font-size: 1.5rem;" (click)="confirmpopup(reserve)">Unirme</button>
-                                                                                </ion-col> -->
+                                                                                <ion-col center text-center col-4 text-right style="margin-left: auto;">
+                                                                                    <button class="btn bg-theme rounded full text-white" style="font-size: 1.5rem;" (click)="joinCrew(crew)">Unirme al Grupo</button>
+                                                                                </ion-col>
                                                                             </ion-row>
                                                                         </ion-card-content>
                                                                     </ion-card>
